--- a/style.css
+++ b/style.css
@@ -81,6 +81,77 @@
   left: 45px;
 }
 
+.star2 {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.star2:before,
+.star2:after {
+  background-color: black;
+  content: "";
+  height: 3px;
+  position: absolute;
+  width: 120px;
+  top: 50%;
+  border-radius: 2px;
+}
+
+.star2:before {
+  right: 45px;
+}
+
+.star2:after {
+  left: 45px;
+}
+
 .jumbotron p {
     padding-bottom: 40px;
+}
+
+#portfolio h2 {
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: bold;
+    margin-top: 100px;
+}
+
+.portfolio-overlay {
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(102,186,158, 0.8);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    border-radius: 6px;
+}
+
+.portfolio-overlay i {
+    color: white;
+    font-size: 90px;
+    top: 50%;
+    position: relative;
+    transform: translateY(-50%);
+}
+
+.logo-wrapper:hover .portfolio-overlay {
+    display: block;
+}
+
+#portfolio img {
+    width:100%;
+    border-radius: 6px;
+}
+
+.logo-wrapper {
+    margin-top: 15px;
+    position: relative;
+}
+
+#logo-section {
+    padding-bottom: 100px;
 }
