--- a/style.css
+++ b/style.css
@@ -155,3 +155,34 @@
 #logo-section {
     padding-bottom: 100px;
 }
+
+#about {
+    background-color: rgb(102,186,158);
+    color: white;
+}
+
+#about h3 {
+    text-transform: uppercase;
+    font-size: 50px;
+    margin-top: 100px;
+}
+
+#about p {
+    font-size: 20px;
+}
+
+#about button {
+    background-color: rgb(102,186,158);
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 15px 50px;
+    color: white;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+}
+
+#about button:hover {
+    background-color: white;
+    color: black;
+}
