--- a/style.css
+++ b/style.css
@@ -186,3 +186,20 @@
     background-color: white;
     color: black;
 }
+
+#contactme h4 {
+    text-transform: uppercase;
+    font-size: 50px;
+    margin-top: 100px;
+}
+
+#contactme button {
+    background-color: rgb(102,186,158);
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 15px 35px;
+    color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 100px;
+}
