--- a/style.css
+++ b/style.css
@@ -203,3 +203,45 @@
     margin-top: 10px;
     margin-bottom: 100px;
 }
+
+footer {
+    background-color: rgb(49,62,79);
+    color: white;
+}
+
+.footer-title {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 80px;
+}
+
+footer .clearfix {
+    margin-bottom: 80px;
+}
+
+footer p .btn {
+    background-color: rgb(49,62,79);
+    color: white;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    border: 2px solid white;
+    font-size: 17px;
+    line-height: 35px;
+}
+
+footer p .btn:hover {
+    background-color: white;
+    color: black;
+}
+
+#copyright {
+    background-color: #1a252f;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+#copyright p {
+    margin-bottom: 0px;
+}
